--- a/lib/r13n/arb/app_fa.arb
+++ b/lib/r13n/arb/app_fa.arb
@@ -1,36 +1,36 @@
 {
-    "@@region": "us",
-    "appName": "Pomodore",
-    "homeTab": "Home",
-    "tasksTab": "Tasks",
-    "timerTab": "Timer",
-    "profileTab": "Profile",
-    "settingTab": "Setting",
-    "timerTitle": "Timer",
+    "@@region": "fa",
+    "appName": "پومودور",
+    "homeTab": "خانه",
+    "tasksTab": "وظایف",
+    "timerTab": "تایمر",
+    "profileTab": "نمایه",
+    "settingTab": "تنظیمات",
+    "timerTitle": "تایمر",
     "smile": ":)",
-    "stayFocus": "Focus Time #",
-    "settingsTitle": "Settings",
-    "generalNotificationTitle": "General Notification",
-    "soundTitle": "Sound",
-    "vibrationTitle": "Vibration",
-    "appUpdatesTitle": "App Updates",
-    "newTipTitle": "New Tip Available",
-    "showAdsTitle": "Show Ads To Support",
-    "changeThemeTitle": "Change Theme",
-    "changeLanguageTitle": "Change Language",
-    "tasksTitle": "Tasks",
-    "emptyTaskListTitle": "You have no task today !",
-    "emptyTaskListHint": "Click the (+) icon to add a new task !",
-    "homeTitle": "Pmodore",
-    "welcomeTitle": "Morning Christina 👋🏻",
-    "dailyTasksDoneTitle": "Wow! Your daily goals is almost done!",
-    "completedTasks": "{d} of {a} completed!",
-    "todayTasks": "Today Tasks (#)",
-    "seeAllTitle": "See All",
-    "notificationsTitle": "Notifications",
-    "addNewTaskTitle": "Add New Task",
-    "dateTitle": "Date",
-    "taskTitle": "Task Title",
-    "categoryTitle": "Category",
-    "submitTask": "Submit Task"
+    "stayFocus": "زمان تمرکز #",
+    "settingsTitle": "تنظیمات",
+    "generalNotificationTitle": "اعلان عمومی",
+    "soundTitle": "صدا",
+    "vibrationTitle": "لرزش",
+    "appUpdatesTitle": "به روز رسانی برنامه",
+    "newTipTitle": "نکات جدید",
+    "showAdsTitle": "نمایش تبلیغات برای پشتیبانی",
+    "changeThemeTitle": "تغییر پوسته",
+    "changeLanguageTitle": "تغییر زبان",
+    "tasksTitle": "وظایف",
+    "emptyTaskListTitle": "امروز هیچ وظیفه ای ندارید!",
+    "emptyTaskListHint": "برای افزودن یک کار جدید روی نماد (+) کلیک کنید!",
+    "homeTitle": "پومودور",
+    "welcomeTitle": "صبح بخیر # 👋🏻",
+    "dailyTasksDoneTitle": "وای! اهداف روزانه شما تقریباً انجام شده است!",
+    "completedTasks": "{d} از {a} کامل شده!",
+    "todayTasks": "امروز وظایف (#)",
+    "seeAllTitle": "مشاهده همه",
+    "notificationsTitle": "اعلان ها",
+    "addNewTaskTitle": "اضافه کردن وظیفه جدید",
+    "dateTitle": "تاریخ",
+    "taskTitle": "عنوان وظیفه",
+    "categoryTitle": "دسته",
+    "submitTask": "ثبت وظیفه"
 }
