l10n package implemented and required files added

--- a/lib/l10n/app-de.arb
+++ b/lib/l10n/app-de.arb
@@ -1,6 +1,6 @@
 {
-    "@@region": "en",
-    "appName": "Pmodore",
+    "@@locale": "de",
+    "appName": "Pomodore",
     "homeTab": "Home",
     "tasksTab": "Tasks",
     "timerTab": "Timer",
