--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -31,5 +31,12 @@
     "dateTitle": "تاریخ",
     "taskTitle": "عنوان وظیفه",
     "categoryTitle": "دسته",
-    "submitTask": "ثبت وظیفه"
+    "submitTask": "ثبت وظیفه",
+    "analysisPageTitle":"Analysis",
+    "todayPmodoreTitle":"Today's Pmodore :",
+    "todayFocusTitle":"Today's Focus :",
+    "fromYesterdayTitle":"x from yesterday",
+    "taskDetailTitle":"Today Tasks Details",
+    "yearAnalysisTitle":"Pmodore Yearly Analysis",
+    "dailyActivityTitle":"Pmodore Daily Activity Counter"
 }
