Minor changes on UI

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -44,5 +44,6 @@
     "addCategoryTitle":"Add Category",
     "submitCategory":"Submit Category",
     "nullValueValidatorMessage":"Please enter some text",
-    "failureTitle":"Failure"
+    "failureTitle":"Failure",
+    "noNotificationTitle":"There is no new notification"
 }
