--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -45,5 +45,6 @@
     "submitCategory":"Submit Category",
     "nullValueValidatorMessage":"Please enter some text",
     "failureTitle":"Failure",
-    "noNotificationTitle":"There is no new notification"
+    "noNotificationTitle":"There is no new notification",
+    "selectTaskTitle":"Tap to select Task"
 }
