--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -46,5 +46,8 @@
     "nullValueValidatorMessage":"Please enter some text",
     "failureTitle":"Failure",
     "noNotificationTitle":"There is no new notification",
-    "selectTaskTitle":"Tap to select Task"
+    "selectTaskTitle":"Tap to select Task",
+    "saveProcessTitle":"Do you want to save process",
+    "yesTitle":"Yes",
+    "noTitle":"No"
 }
