--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -49,5 +49,6 @@
     "selectTaskTitle":"Tap to select Task",
     "saveProcessTitle":"Do you want to save process",
     "yesTitle":"Yes",
-    "noTitle":"No"
+    "noTitle":"No",
+    "startTimerWithoutTaskWarning":"Please select a task !"
 }
