feat: translate application string and content and fix some alignment issue

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,54 +1,54 @@
-{
+ {   
     "appName": "Pomodore",
-    "homeTab": "Home",
-    "tasksTab": "Tasks",
+    "homeTab": "Startseite",
+    "tasksTab": "Aufgaben",
     "timerTab": "Timer",
-    "profileTab": "Profile",
-    "settingTab": "Settings",
+    "profileTab": "Profil",
+    "settingTab": "Einstellungen",
     "timerTitle": "Timer",
     "smile": ":)",
-    "stayFocus": "Focus Time #",
-    "settingsTitle": "Settings",
-    "generalNotificationTitle": "General Notification",
-    "soundTitle": "Sound",
+    "stayFocus": "Konzentrationszeit #",
+    "settingsTitle": "Einstellungen",
+    "GeneralNotificationTitle": "Allgemeine Benachrichtigung",
+    "soundTitle": "Klang",
     "vibrationTitle": "Vibration",
-    "appUpdatesTitle": "App Updates",
-    "newTipTitle": "New Tip Available",
-    "showAdsTitle": "Show Ads To Support",
-    "changeThemeTitle": "Change Theme",
-    "changeLanguageTitle": "Change Language",
-    "tasksTitle": "Tasks",
-    "emptyTaskListTitle": "You have no task today !",
-    "emptyTaskListHint": "Click the (+) icon to add a new task !",
+    "appUpdatesTitle": "App-Updates",
+    "newTipTitle": "Neuer Tipp verfügbar",
+    "showAdsTitle": "Werbung anzeigen, um zu unterstützen",
+    "changeThemeTitle": "Thema ändern",
+    "changeLanguageTitle": "Sprache ändern",
+    "tasksTitle": "Aufgaben",
+    "emptyTaskListTitle": "Sie haben heute keine Aufgaben!",
+    "emptyTaskListHint": "Klicken Sie auf das (+) Symbol, um eine neue Aufgabe hinzuzufügen!",
     "homeTitle": "Pmodore",
-    "welcomeTitle": "Morning Christina 👋🏻",
-    "dailyTasksDoneTitle": "Wow! Your daily goals is almost done!",
-    "completedTasks": "{d} of {a} completed!",
-    "todayTasks": "Today Tasks (#)",
-    "seeAllTitle": "See All",
-    "notificationsTitle": "Notifications",
-    "addNewTaskTitle": "Add New Task",
-    "dateTitle": "Date",
-    "taskTitle": "Task Title",
-    "categoryTitle": "Category",
-    "submitTask": "Submit Task",
-    "analysisPageTitle":"Analysis",
-    "todayPmodoreTitle":"Today's Pmodore :",
-    "todayFocusTitle":"Today's Focus :",
-    "fromYesterdayTitle":"x from yesterday",
-    "taskDetailTitle":"Today Tasks Details",
-    "yearAnalysisTitle":"Pmodore Yearly Analysis",
-    "dailyActivityTitle":"Pmodore Daily Activity Counter",
-    "successTitle":"Successful",
-    "taskDescription":"Description",
-    "addCategoryTitle":"Add Category",
-    "submitCategory":"Submit Category",
-    "nullValueValidatorMessage":"Please enter some text",
-    "failureTitle":"Failure",
-    "noNotificationTitle":"There is no new notification",
-    "selectTaskTitle":"Tap to select Task",
-    "saveProcessTitle":"Do you want to save process",
-    "yesTitle":"Yes",
-    "noTitle":"No",
-    "startTimerWithoutTaskWarning":"Please select a task !"
+    "welcomeTitle": "E-Mail an Christina 👋🏻",
+    "dailyTasksDoneTitle": "Wow! Ihre täglichen Ziele sind fast erreicht!",
+    "completedTasks": "{d} von {a} abgeschlossen!",
+    "todayTasks": "Heutige Aufgaben (#)",
+    "seeAllTitle": "Alle anzeigen",
+    "notificationsTitle": "Benachrichtigungen",
+    "addNewTaskTitle": "Neue Aufgabe hinzufügen",
+    "dateTitle": "Datum",
+    "taskTitle": "Aufgabentitel",
+    "categoryTitle": "Kategorie",
+    "submitTask": "Aufgabe übermitteln",
+    "analysisPageTitle":"Analyse",
+    "todayPmodoreTitle":"Heutiger Pmodore :",
+    "todayFocusTitle":"Heutiger Fokus :",
+    "fromYesterdayTitle":"x von gestern",
+    "taskDetailTitle":"Details der heutigen Aufgaben",
+    "yearAnalysisTitle":"Jährliche Analyse von Pmodore",
+    "dailyActivityTitle":"Täglicher Aktivitätszähler von Pmodore",
+    "successTitle":"Erfolgreich",
+    "taskDescription":"Beschreibung",
+    "addCategoryTitle":"Kategorie hinzufügen",
+    "submitCategory":"Kategorie übermitteln",
+    "nullValueValidatorMessage":"Bitte geben Sie einen Text ein",
+    "failureTitle":"Fehler",
+    "noNotificationTitle":"Es gibt keine neue Benachrichtigung",
+    "selectTaskTitle":"Aufgabe zum Aus",
+    "saveProcessTitle":"Möchtest du den Prozess speichern?",
+    "yesTitle":"Ja",
+    "noTitle":"Nein",
+    "startTimerWithoutTaskWarning":"Bitte wählen Sie eine Aufgabe aus!"
 }
