--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -32,23 +32,23 @@
     "taskTitle": "عنوان وظیفه",
     "categoryTitle": "دسته",
     "submitTask": "ثبت وظیفه",
-    "analysisPageTitle":"Analysis",
-    "todayPmodoreTitle":"Today's Pmodore :",
-    "todayFocusTitle":"Today's Focus :",
-    "fromYesterdayTitle":"x from yesterday",
-    "taskDetailTitle":"Today Tasks Details",
-    "yearAnalysisTitle":"Pmodore Yearly Analysis",
-    "dailyActivityTitle":"Pmodore Daily Activity Counter",
-    "successTitle":"Successful",
-    "taskDescription":"Description",
-    "addCategoryTitle":"Add Category",
-    "submitCategory":"Submit Category",
-    "nullValueValidatorMessage":"Please enter some text",
-    "failureTitle":"Failure",
-    "noNotificationTitle":"There is no new notification",
-    "selectTaskTitle":"Tap to select Task",
-    "saveProcessTitle":"Do you want to save process",
-    "yesTitle":"Yes",
-    "noTitle":"No",
-    "startTimerWithoutTaskWarning":"Please select a task !"
+    "analysisPageTitle":"تحلیل",
+    "todayPmodoreTitle":"امروز دوره Pomodoro :",
+    "todayFocusTitle":"امروز تمرکز :",
+    "fromYesterdayTitle":"x از دیروز",
+    "taskDetailTitle":"جزئیات وظایف امروز",
+    "yearAnalysisTitle":"تحلیل سالانه Pomodoro",
+    "dailyActivityTitle":"شمارش فعالیت روزانه Pomodoro",
+    "successTitle":"موفقیت آمیز",
+    "taskDescription":"شرح",
+    "addCategoryTitle":"افزودن دسته بندی",
+    "submitCategory":"ثبت دسته بندی",
+    "nullValueValidatorMessage":"لطفا متنی را وارد کنید",
+    "failureTitle":"ناموفق",
+    "noNotificationTitle":"هیچ اعلان جدیدی وجود ندارد",
+    "selectTaskTitle":"برای انتخاب وظیفه بر روی آن كلیك كنید",
+    "saveProcessTitle":"آیا می خواهید فرآیند را ذخیره کنید؟",
+    "yesTitle":"بله",
+    "noTitle":"خیر",
+    "startTimerWithoutTaskWarning":"لطفا یک وظیفه انتخاب کنید!"
 }
