--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -53,5 +53,10 @@
     "startTimerWithoutTaskWarning":"لطفا یک وظیفه انتخاب کنید!",
     "todayCompletedTask":"Today's Completed Task :",
     "lessTitle":"less",
-    "moreTitle":"more"
+    "moreTitle":"more",
+    "selectDailyGoalTitle":"Select daily goal :",
+    "saveDailyGoalButton":"Save",
+    "dailyGoalTitle":"Daily Goal",
+    "dailyGoalHint":"How many task you can do in one day :)",
+    "submitButton":"Submit"
 }
