--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -20,7 +20,7 @@
     "tasksTitle": "Aufgaben",
     "emptyTaskListTitle": "Du hast heute keine Aufgabe!",
     "emptyTaskListHint": "Klicke auf das (+) -Symbol, um eine neue Aufgabe hinzuzufügen!",
-    "homeTitle": "Pmodore",
+    "homeTitle": "Pmodoro",
     "welcomeTitle": "E-Mail an Christina 👋🏻",
     "dailyTasksDoneTitle": "Wow! Ihre täglichen Ziele sind fast erreicht!",
     "completedTasks": "{d} von {a} abgeschlossen!",
@@ -33,12 +33,12 @@
     "categoryTitle": "Kategorie",
     "submitTask": "Aufgabe übermitteln",
     "analysisPageTitle":"Analyse",
-    "todayPmodoreTitle":"Heutiger Pmodore :",
+    "todayPmodoreTitle":"Heutiger Pmodoro :",
     "todayFocusTitle":"Heutiger Fokus :",
     "fromYesterdayTitle":"x von gestern",
     "taskDetailTitle":"Details der heutigen Aufgaben",
-    "yearAnalysisTitle":"Jährliche Analyse von Pmodore",
-    "dailyActivityTitle":"Täglicher Aktivitätszähler von Pmodore",
+    "yearAnalysisTitle":"Jährliche Analyse von Pmodoro",
+    "dailyActivityTitle":"Täglicher Aktivitätszähler von Pmodoro",
     "successTitle":"Erfolgreich",
     "taskDescription":"Beschreibung",
     "addCategoryTitle":"Kategorie hinzufügen",
