--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,5 @@
 {
-    "appName": "Pmodore",
+    "appName": "Pmodoro",
     "homeTab": "Home",
     "tasksTab": "Tasks",
     "timerTab": "Timer",
@@ -20,7 +20,7 @@
     "tasksTitle": "Tasks",
     "emptyTaskListTitle": "You have no task today !",
     "emptyTaskListHint": "Click the (+) icon to add a new task !",
-    "homeTitle": "Pmodore",
+    "homeTitle": "Pmodoro",
     "welcomeTitle": "Morning Christina 👋🏻",
     "dailyTasksDoneTitle": "Wow! Your daily goals is almost done!",
     "completedTasks": "{d} of {a} completed!",
@@ -33,12 +33,12 @@
     "categoryTitle": "Category",
     "submitTask": "Submit Task",
     "analysisPageTitle":"Analysis",
-    "todayPmodoreTitle":"Today's Pmodore :",
+    "todayPmodoreTitle":"Today's Pmodoro :",
     "todayFocusTitle":"Today's Focus :",
     "fromYesterdayTitle":"x from yesterday",
     "taskDetailTitle":"Today Tasks Details",
-    "yearAnalysisTitle":"Pmodore Yearly Analysis",
-    "dailyActivityTitle":"Pmodore Daily Activity Counter",
+    "yearAnalysisTitle":"Pmodoro Yearly Analysis",
+    "dailyActivityTitle":"Pmodoro Daily Activity Counter",
     "successTitle":"Successful",
     "taskDescription":"Description",
     "addCategoryTitle":"Add Category",
