--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -73,5 +73,15 @@
     "niceJobTitle":"Gute Arbeit! 😎",
     "completedAPomodoroBody":"Du hast einen Pomodoro abgeschlossen!",
     "hohoTitle":"Hoho! 🥳",
-    "anotherPomodoroBody":"Du kannst einen weiteren Pomodoro machen!"
+    "anotherPomodoroBody":"Du kannst einen weiteren Pomodoro machen!",
+    "userTitle":"User Area",
+    "nameHint":"Full name",
+    "emailHint":"Email",
+    "usernameHint":"Username",
+    "passwordHint":"Password",
+    "forgetPasswordHint":"Forget password",
+    "signUpBtn":"Sign Up",
+    "signInBtn":"Sign In",
+    "doYouHaveAcc":"Do you have an account ?",
+    "registerNewAccount":"Register new account!"
   }
