--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -83,5 +83,8 @@
     "signUpBtn":"Sign Up",
     "signInBtn":"Sign In",
     "doYouHaveAcc":"Do you have an account ?",
-    "registerNewAccount":"Register new account!"        
+    "registerNewAccount":"Register new account!",
+    "logoutButton":"Logout",
+    "lastSync":"Last sync at #",
+    "profileTitle":"Profile"            
 }
