feat: complete get all habits

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -93,5 +93,7 @@
     "habitNameHint": "Name",
     "habitDescriptionHint": "Beschreibung",
     "habitIcon": "Symbol",
-    "habitColor": "Farbe"
+    "habitColor": "Farbe",
+    "completeHabit":"Complete",
+    "uncompleteHabit":"Uncomplete"
   }
