chore: add new field to check habit status

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -95,5 +95,6 @@
     "habitIcon":"Icon",
     "habitColor":"Color",
     "completeHabit":"Complete",
-    "uncompleteHabit":"Uncomplete"    
+    "uncompleteHabit":"Uncomplete",
+    "noHabitMessage":"There is no habit!"    
 }
