--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -95,5 +95,6 @@
     "habitIcon": "Symbol",
     "habitColor": "Farbe",
     "completeHabit":"Complete",
-    "uncompleteHabit":"Uncomplete"
+    "uncompleteHabit":"Uncomplete",
+    "noHabitMessage":"There is no habit!"
   }
