feat: complete done habit functionality

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -95,6 +95,6 @@
     "habitIcon": "Symbol",
     "habitColor": "Farbe",
     "completeHabit":"Complete",
-    "uncompleteHabit":"Uncomplete",
+    "completedHabit":"Completed",
     "noHabitMessage":"There is no habit!"
   }
