feat: complete edit habit

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -96,5 +96,6 @@
     "habitColor": "Farbe",
     "completeHabit":"Complete",
     "completedHabit":"Completed",
-    "noHabitMessage":"There is no habit!"
+    "noHabitMessage":"There is no habit!",
+    "updateHabit":"Update Habit"
   }
