feat: show all tasks in home with status

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -97,5 +97,6 @@
     "completeHabit":"Complete",
     "completedHabit":"Completed",
     "noHabitMessage":"There is no habit!",
-    "updateHabit":"Update Habit" 
+    "updateHabit":"Update Habit",
+    "remainTaskTitle":"Tasks ( # )"
 }
