--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -94,9 +94,9 @@
     "habitDescriptionHint": "Beschreibung",
     "habitIcon": "Symbol",
     "habitColor": "Farbe",
-    "completeHabit":"Complete",
-    "completedHabit":"Completed",
-    "noHabitMessage":"There is no habit!",
-    "updateHabit":"Update Habit",
-    "remainTaskTitle":"Tasks ( # )"
+    "completeHabit": "Abgeschlossen",
+    "completedHabit": "Abgeschlossen",
+    "noHabitMessage": "Es gibt keine Gewohnheit!",
+    "updateHabit": "Gewohnheit aktualisieren",
+    "remainTaskTitle": "Aufgaben (#) verbleiben"
   }
