feat: translate all strings

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -98,5 +98,6 @@
     "completedHabit": "Abgeschlossen",
     "noHabitMessage": "Es gibt keine Gewohnheit!",
     "updateHabit": "Gewohnheit aktualisieren",
-    "remainTaskTitle": "Aufgaben (#) verbleiben"
+    "remainTaskTitle": "Aufgaben (#) verbleiben",
+    "selectDate":"Auswählen des Fälligkeitsdatums"
   }
