--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -3,7 +3,7 @@
     "homeTab": "خانه",
     "tasksTab": "وظایف",
     "timerTab": "تایمر",
-    "profileTab": "نمایه",
+    "profileTab": "پروفایل",
     "settingTab": "تنظیمات",
     "timerTitle": "تایمر",
     "smile": ":)",
@@ -14,14 +14,14 @@
     "vibrationTitle": "لرزش",
     "appUpdatesTitle": "به روز رسانی برنامه",
     "newTipTitle": "نکات جدید",
-    "showAdsTitle": "نمایش تبلیغات برای پشتیبانی",
+    "showAdsTitle": "نمایش تبلیغات",
     "changeThemeTitle": "تغییر پوسته",
     "changeLanguageTitle": "تغییر زبان",
     "tasksTitle": "وظایف",
     "emptyTaskListTitle": "امروز هیچ وظیفه ای ندارید!",
     "emptyTaskListHint": "برای افزودن یک کار جدید روی نماد (+) کلیک کنید!",
     "homeTitle": "پومودور",
-    "welcomeTitle": "صبح بخیر # 👋🏻",
+    "welcomeTitle": "صبح بخیر #",
     "dailyTasksDoneTitle": "وای! اهداف روزانه شما تقریباً انجام شده است!",
     "completedTasks": "{d} از {a} کامل شده!",
     "todayTasks": "امروز وظایف (#)",
@@ -33,12 +33,12 @@
     "categoryTitle": "دسته",
     "submitTask": "ثبت وظیفه",
     "analysisPageTitle":"تحلیل",
-    "todayPmodoreTitle":"امروز دوره Pomodoro :",
+    "todayPmodoreTitle":"امروز دوره پومودور :",
     "todayFocusTitle":"امروز تمرکز :",
     "fromYesterdayTitle":"x از دیروز",
     "taskDetailTitle":"جزئیات وظایف امروز",
-    "yearAnalysisTitle":"تحلیل سالانه Pomodoro",
-    "dailyActivityTitle":"شمارش فعالیت روزانه Pomodoro",
+    "yearAnalysisTitle":"تحلیل سالانه پومودور",
+    "dailyActivityTitle":"شمارش فعالیت روزانه پومودور",
     "successTitle":"موفقیت آمیز",
     "taskDescription":"شرح",
     "addCategoryTitle":"افزودن دسته بندی",
@@ -51,52 +51,53 @@
     "yesTitle":"بله",
     "noTitle":"خیر",
     "startTimerWithoutTaskWarning":"لطفا یک وظیفه انتخاب کنید!",
-    "todayCompletedTask":"Today's Completed Task :",
-    "lessTitle":"less",
-    "moreTitle":"more",
-    "selectDailyGoalTitle":"Select daily goal :",
-    "saveDailyGoalButton":"Save",
-    "dailyGoalTitle":"Daily Goal",
-    "dailyGoalHint":"How many task you can do in one day :)",
-    "submitButton":"Submit",
-    "minCharValidationTitle":"Minimum size 2 character",
-    "taskManagementTitle":"Task management",
-    "editTaskTitle":"Edit Task",
-    "deleteTaskTitle":"Delete Task",
-    "completeTaskTitle":"Complete Task",
-    "firstStageDailyGoalTitle":"Start strong",
-    "secondStageDailyGoalTitle":"You can. You should do more",
-    "thirdStageDailyGoalTitle":"Wow! Your daily goals is almost done!",
-    "lastStageDailyGoalTitle":"Well done, you did it",
-    "changeTimerDurationTitle":"Change timer duration (min)",
-    "yayTitle":"بسیار عالی! 😎",
-    "niceJobTitle":"کارت درسته! 😎",
-    "completedAPomodoroBody":"یک پوموردور انجام دادید!",
-    "hohoTitle":"درود! 😎",
-    "anotherPomodoroBody":"You can do another pomodoro!",
-    "userTitle":"User Area",
-    "nameHint":"Full name",
-    "emailHint":"Email",
-    "usernameHint":"Username",
-    "passwordHint":"Password",
-    "forgetPasswordHint":"Forget password",
-    "signUpBtn":"Sign Up",
-    "signInBtn":"Sign In",
-    "doYouHaveAcc":"Do you have an account ?",
-    "registerNewAccount":"Register new account!",
-    "logoutButton":"Logout",
-    "lastSync":"Last sync at #",
-    "profileTitle":"Profile",
-    "habitTrackingTitle":"Habit Traking",
-    "noHabitMessage":"There is no habit!\n Please define new habit",
-    "addHabitTitle":"Add Habit",
-    "habitNameHint":"Name",
-    "habitDescriptionHint":"Description",
-    "habitIcon":"Icon",
-    "habitColor":"Color",
-    "completeHabit":"Complete",
-    "completedHabit":"Completed",
-    "noHabitMessage":"There is no habit!",
-    "updateHabit":"Update Habit",
-    "remainTaskTitle":"Tasks ( # )"
+    "todayCompletedTask":"وظایف کامل شده امروز :",
+    "lessTitle":"کمتر",
+    "moreTitle": "بیشتر",
+    "selectDailyGoalTitle": "هدف روزانه را انتخاب کنید:",
+    "saveDailyGoalButton": "ذخیره",
+    "dailyGoalTitle": "هدف روزانه",
+    "dailyGoalHint": "تعداد وظایفی که می‌توانید در یک روز انجام دهید :)",
+    "submitButton": "ثبت",
+    "minCharValidationTitle": "حداقل تعداد کاراکترها 2 است",
+    "taskManagementTitle": "مدیریت وظایف",
+    "editTaskTitle": "ویرایش وظیفه",
+    "deleteTaskTitle": "حذف وظیفه",
+    "completeTaskTitle": "انجام دادن وظیفه",
+    "firstStageDailyGoalTitle": "چند وظیفه وجود دارد، شروع قوی کنید",
+    "secondStageDailyGoalTitle": "می‌توانید بیشتر کار کنید، باید کار بیشتری انجام دهید",
+    "thirdStageDailyGoalTitle": "واو! هدف روزانه شما تقریباً به پایان رسیده است!",
+    "lastStageDailyGoalTitle": "عالی بود، موفق شدید",
+    "changeTimerDurationTitle": "تغییر مدت زمان تایمر (دقیقه)",
+    "yayTitle": "یاااااهووو! 😇",
+    "niceJobTitle": "کار خوبی انجام دادید! 😎",
+    "completedAPomodoroBody": "شما یک پومودورو انجام دادید!",
+    "hohoTitle": "هووووهووو! 🥳",
+    "anotherPomodoroBody": "می‌توانید پومودوروی دیگری انجام دهید!",
+    "userTitle": "منطقه کاربری",
+    "nameHint": "نام کامل",
+    "emailHint": "ایمیل",
+    "usernameHint": "نام کاربری",
+    "passwordHint": "رمز عبور",
+    "forgetPasswordHint": "فراموشی رمز عبور",
+    "signUpBtn": "ثبت نام",
+    "signInBtn": "ورود",
+    "doYouHaveAcc": "حساب کاربری دارید؟",
+    "registerNewAccount": "ثبت نام حساب کاربری جدید!",
+    "logoutButton": "خروج",
+    "lastSync": "آخرین همگام سازی در #",
+    "profileTitle": "پروفایل",
+    "habitTrackingTitle": "ردیابی عادت‌ها",
+    "noHabitMessage": "هیچ عادتی وجود ندارد! \n لطفاً یک عادت جدید تعریف کنید",
+    "addHabitTitle": "افزودن عادت",
+    "habitNameHint": "نام",
+    "habitDescriptionHint": "توضیحات",
+    "habitIcon": "آیکون",
+    "habitColor": "رنگ",
+    "completeHabit": "انجام دادن",
+    "completedHabit": "انجام شده",
+    "noHabitMessage": "هیچ عادتی وجود ندارد!",
+    "updateHabit": "به‌روزرسانی عادت",
+    "remainTaskTitle": "وظایف (#) باقی مانده",
+    "selectDate":"تاریخ و زمان را انتخاب کنید"
 }
