--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -98,5 +98,6 @@
     "completedHabit":"Completed",
     "noHabitMessage":"There is no habit!",
     "updateHabit":"Update Habit",
-    "remainTaskTitle":"Tasks ( # )"
+    "remainTaskTitle":"Tasks ( # )",
+    "selectDate":"Select Deadline Datetime"
 }
